--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,55 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <link rel="icon" href="<%= BASE_URL %>img/icons/favicon.ico" />
     <title>Raven Mobile Auto and RV</title>
     <meta
       name="description"
-      content="Raven Mobile Auto and RV provides a wide range of automotive repair services for your convenience. Our experienced technicians can handle your vehicle’s problem. Contact us via phone, email, or in person for more information about the services we offer."
+      content="Raven Mobile Auto and RV provides a wide range of automotive repair services for your convenience. Our experienced technicians can handle your vehicle's problem. Contact us via phone, email, or in person for more information about the services we offer."
     />
+    <!-- Android Icons -->
+    <link rel="icon" type="image/png" sizes="192x192" href="<%= BASE_URL %>img/icons/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="<%= BASE_URL %>img/icons/android-chrome-512x512.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="<%= BASE_URL %>img/icons/android-chrome-maskable-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="<%= BASE_URL %>img/icons/android-chrome-maskable-512x512.png">
+    <link rel="icon" type="image/png" sizes="144x144" href="<%= BASE_URL %>img/icons/android-icon-144x144.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="<%= BASE_URL %>img/icons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="36x36" href="<%= BASE_URL %>img/icons/android-icon-36x36.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="<%= BASE_URL %>img/icons/android-icon-48x48.png">
+    <link rel="icon" type="image/png" sizes="72x72" href="<%= BASE_URL %>img/icons/android-icon-72x72.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="<%= BASE_URL %>img/icons/android-icon-96x96.png">
+    <!-- Apple Icons -->
+    <link rel="apple-touch-icon" sizes="57x57" href="<%= BASE_URL %>img/icons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="<%= BASE_URL %>img/icons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="<%= BASE_URL %>img/icons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="<%= BASE_URL %>img/icons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="<%= BASE_URL %>img/icons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="<%= BASE_URL %>img/icons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="<%= BASE_URL %>img/icons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="<%= BASE_URL %>img/icons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>img/icons/apple-icon-180x180.png">
+    <link rel="apple-touch-icon" href="<%= BASE_URL %>img/icons/apple-icon-precomposed.png">
+    <link rel="apple-touch-icon" href="<%= BASE_URL %>img/icons/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="<%= BASE_URL %>img/icons/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="<%= BASE_URL %>img/icons/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>img/icons/apple-touch-icon-180x180.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="<%= BASE_URL %>img/icons/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="<%= BASE_URL %>img/icons/apple-touch-icon-76x76.png">
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>img/icons/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>img/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="<%= BASE_URL %>img/icons/favicon-96x96.png">
+    <!-- Microsoft Icons -->
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="<%= BASE_URL %>img/icons/ms-icon-144x144.png">
+    <meta name="msapplication-config" content="<%= BASE_URL %>browserconfig.xml">
+    <meta name="msapplication-square70x70logo" content="<%= BASE_URL %>img/icons/ms-icon-70x70.png">
+    <meta name="msapplication-square150x150logo" content="<%= BASE_URL %>img/icons/ms-icon-150x150.png">
+    <meta name="msapplication-square310x310logo" content="<%= BASE_URL %>img/icons/ms-icon-310x310.png">
+    <!-- Manifest -->
+    <link rel="manifest" href="<%= BASE_URL %>manifest.json">
+    <!-- Safari Pinned Tab -->
+    <link rel="mask-icon" href="<%= BASE_URL %>img/icons/safari-pinned-tab.svg" color="#5bbad5">
   </head>
   <body>
     <noscript>
